<resources>
    <string name="app_name">Pizza Order Assistant</string>

    <string name="txtTakeOrder">Take a new order to:</string>
    <string name="txtPizza">Pick Pizza</string>
    <string name="txtDough">Pick Dough</string>
    <string name="txtSize">Pick Size</string>
    <string name="txtTopping">Additional Toppings</string>
    <string name="txtSauce">Pick Sauce</string>
    <string name="txtPickTime">Pick up Time:</string>
    <string name="txtPacking">Packing Option:</string>
    <string name="txtOrder">Order details</string>
    <string name="txtTotal">Total</string>

    <string name="rdbtPizzeria">Pizzeria</string>
    <string name="rdbtTakeaway">Takeaway</string>
    <string name="rdbtDelivery">Delivery</string>

    <string name="hintAddress">Delivery Address</string>
    <string name="hintPhone">Phone Number</string>
    <string name="hintNotSelected">Not selected yet</string>
    <string name="hintClickTime">Long click here to set the time. </string>

    <string name="cbTable">Sauce for the table</string>

    <string name="btnOK">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnCheckout">Check Out</string>
    <string name="btnAdd">Add another Pizza</string>
    <string name="mnuExit">Exit</string>
    <string name="mnuCancel">Cancel order</string>

    <string name="toastSelectType">Please select an order type first.</string>
    <string name="toastSelectTime">Please select a time</string>
    <string name="toastSelectPckOpt">Please select a packing option</string>
    <string name="toastSelectTiPck">Please select a time and packing option first.</string>
    <string name="toastSelectAdress">Please select an address</string>
    <string name="toastSelectPhNr">Please select a phone number</string>
    <string name="toastSelectAdNr">Please select an address and phone number first.</string>
    <string name="toastOrderCancel">Order cancelled</string>
    <string name="toastSelectTable">Please select a table</string>
    <string name="toastNoDough">Please select a dough first.</string>
    <string name="toastNoSize">Please select a size first.</string>
    <string name="toastMissingAllMain">Please select a size and dough first.</string>
    <string name="toastSauceNot">Please select a sauce for the table first.</string>
    <string name="toastTooMany">The limit of pizzas per order is reached, please checkout begin a new one</string>
    <string name="toastTimeNot">Please pick a later time.\nThe time has to be at least 30min in the future.</string>

    <string name="alertSizeTitle">Select Size</string>
    <string name="alertTopTitle">Select extra toppings</string>
    <string name="alertPickupTimeTitle">Select Pickup Time</string>
    <string name="alertTableTitle">Select Table</string>
    <string name="alertOrderTitle">Order Information</string>

    <string name="mesConfirmation">Order was successfully received.</string>
    <string name="resultConf">Received order successfully.</string>

    <string name="stringNotSelected">not selected</string>
    <string name="stringNone">none</string>

    <string name="stringPartPacking">Packing:</string>
    <string name="stringPartTime">Pickup Time:</string>
    <string name="stringPartDelivery">Delivery Address:</string>
    <string name="stringPartPhone">Phone Number:</string>
    <string name="stringPartOption">Option:</string>
    <string name="stringPartTable">Table:</string>
    <string name="stringPartSauce">Sauce for the table:</string>

    <string name="stringMedium">Medium</string>
    <string name="stringBig">Big</string>

    <string name="intentMesTable">tableNr</string>
    <string name="intentMesOrder">order</string>
    <string name="intentMesOrderType">ordertype</string>
    <string name="intentMesPacking">packing</string>
    <string name="intentMesTime">time</string>
    <string name="intentMesAddress">address</string>
    <string name="intentMesPhone">phone</string>

    <string name="errorReading">Reading failed.</string>

    <string name="mediumPizPrice">2.00</string>
    <string name="largePizPrice">5.00</string>
    <string name="saucePrice">2.00</string>
    <string name="grpSaucePrice">6.00</string>

    <string name="currency"> € </string>

    <string-array name="arraySizes">
        <item name ="not">not selected</item>
        <item name="sizeSmall">Small -for kids-</item>
        <item name="sizeMedium">Medium</item>
         <item name="sizeBig">Big</item>
    </string-array>

    <string-array name="arrayPckOpt">
        <item name ="none">not selected</item>
        <item name="carton">paper carton</item>
        <item name="plastic">in a plastic box</item>
        <item name="own">Bring your own boxes</item>
    </string-array>

    <string-array name="arrayDough">
        <item name="not">not selected</item>
        <item name="dough1">Neopolitan</item>
        <item name="dough2">Chicago</item>
        <item name="dough3">New York</item>
        <item name="dough4">Sicilian</item>
    </string-array>
</resources>
