<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/big">

    <TextView
        android:id="@+id/txtTakeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txtTakeOrder"
        android:textAlignment="center"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/rdGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8">

        <RadioButton
            android:id="@+id/rdbtPizzeria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdbtPizzeria" />

        <RadioButton
            android:id="@+id/rdbtTakeaway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdbtTakeaway" />

        <RadioButton
            android:id="@+id/rdbtDelivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdbtDelivery" />

    </RadioGroup>

    <Button
        android:id="@+id/btnOrderTypeOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/btnOK" />

</LinearLayout>