<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/big">

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintAddress"
        android:inputType="textPostalAddress" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="182dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/big"
        android:src="@drawable/adress" />

    <EditText
        android:id="@+id/eTPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintPhone"
        android:inputType="phone" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="201dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/big"
        android:src="@drawable/phone_number" />

    <Button
        android:id="@+id/btnDeliveryOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnOK"
        tools:text="@string/btnOK" />
</LinearLayout>